--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -16,7 +16,7 @@
       .aboutusnav {
         background-color: #369afe;
         border-radius: 0% 50% 0% 50%;
-        color: white;
+        color: white !important;
       }
     </style>
   </head>
