--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -12,7 +12,7 @@
 			.contactusnav {
 				background-color: #369afe;
 				border-radius: 0% 50% 0% 50%;
-				color: white;
+				color: white !important;
 			}
 		</style>
 	</head>
