--- a/views/demovideos.ejs
+++ b/views/demovideos.ejs
@@ -21,9 +21,9 @@
 		<title>Demo Videos</title>
 		<style>
 			.Demovideosnav {
-				background-color: #60efff;
+				background-color: #369afe;
 				border-radius: 0% 50% 0% 50%;
-				color: rgb(0, 0, 0);
+				color: white !important;
 			}
 		</style>
 	</head>
