--- a/views/successStories2.ejs
+++ b/views/successStories2.ejs
@@ -13,7 +13,7 @@
 		.successstoriesnav{
 			background-color: #369afe;
 			border-radius: 0% 50% 0% 50%;
-			color: white;
+			color: white !important;
 		}
 	</style>
 </head>
