--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,7 @@
 		.homenav{
 			background-color: #369afe;
 			border-radius: 0% 50% 0% 50%;
-			color: white;
+			color: white !important;
 		}
 	</style>
 </head>
