--- a/views/results.ejs
+++ b/views/results.ejs
@@ -15,9 +15,9 @@
 		<title>Results</title>
 		<style>
 			.resultsnav {
-				background-color: #60efff;
+				background-color: #369afe;
 				border-radius: 0% 50% 0% 50%;
-				color: rgb(0, 0, 0);
+				color: white !important;
 			}
 		</style>
 	</head>
