--- a/public/stylesheets/pagination.css
+++ b/public/stylesheets/pagination.css
@@ -321,7 +321,7 @@
 	background-color: #ce4541;
 }
 .paginationjs .paginationjs-pages li.paginationjs-next {
-	border-right: 1px solid #aaa\9;
+	border-right: 1px solid #aaa9;
 }
 .paginationjs .paginationjs-go-input > input[type='text'] {
 	line-height: 28px\9;
