--- a/public/stylesheets/sliderrevolution.css
+++ b/public/stylesheets/sliderrevolution.css
@@ -34,7 +34,18 @@ body {
 .left {
   position: relative;
 }
-
+.exit {
+  height: 100px;
+  width: 100px;
+  position: absolute;
+  cursor: pointer;
+  right: 25%;
+  top: 14%;
+  z-index: 4;
+}
+.exit img {
+  width: 100%;
+}
 .right {
   position: relative;
   height: 90%;
@@ -85,6 +96,7 @@ body {
   z-index: 5;
   justify-content: center;
   align-items: center;
+  z-index: 3;
 }
 
 .preview img {
@@ -98,10 +110,17 @@ body {
 .closesvg {
   position: absolute;
   cursor: pointer;
-  right: 14%;
+  right: 25%;
   top: 14%;
+  z-index: 5;
+  text-align: center;
+  
+  
 }
-
+.closesvg img {
+  width: 100%;
+  z-index: 5;
+}
 /* Latest Updates */
 
 .buttondiv {
