--- a/views/home.ejs
+++ b/views/home.ejs
@@ -59,12 +59,12 @@
 
 												<button class="carousel-control-prev" type="button"
 													data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-													<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+													<span class="carousel-control-prev-icon" style="height: 50px; width: 50px; font-weight: bolder;" aria-hidden="true"></span>
 													<span class="visually-hidden">Previous</span>
 												</button>
 												<button class="carousel-control-next" type="button"
 													data-bs-target="#carouselExampleControls" data-bs-slide="next">
-													<span class="carousel-control-next-icon" aria-hidden="true"></span>
+													<span class="carousel-control-next-icon" style="height: 50px; width: 50px; font-weight: bolder;" aria-hidden="true"></span>
 													<span class="visually-hidden">Next</span>
 												</button>
 									</div>
