--- a/views/home.ejs
+++ b/views/home.ejs
@@ -239,7 +239,8 @@
 								<h3>Consecutive years <br> of District first in <br>Salem</h3>
 							</div>
 							<div class="Stat">
-								<h1 class="counter successRate counter-value" data-count="<%= neetfor.successrate %>">0.</h1>
+								<span style="display: flex;"><h1 class="counter successRate counter-value" data-count="<%= neetfor.successrate %>">0 </h1><div class="percentage"> %</div></span>
+								
 								<h3>Success <br> rate in <br> NEET</h3>
 							</div>
 							<div class="Stat">
