--- a/views/admin/results/studentdetails.ejs
+++ b/views/admin/results/studentdetails.ejs
@@ -15,18 +15,12 @@
   </head>
   <body>
     <div class="previewTopper">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="25"
-        height="25"
-        fill="#000"
-        class="bi bi-x-lg closesvg"
-        viewBox="0 0 16 16"
-      >
-        <path
-          d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
-        />
-      </svg>
+      <span class="closesvg" style="z-index: 10; height: 100px;width: 200px; right: 20%; top: 8%;">
+				<img
+				style="z-index: 10;" src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
+				/>
+				<h5 class="closeText">Close</h5>
+			</span>
     </div>
     <%- include('../../layout/adminheader') %>
     <section class="mainsection">
