--- a/views/admin/results/studentdetails.ejs
+++ b/views/admin/results/studentdetails.ejs
@@ -40,16 +40,20 @@
             p-5
           "
           style="z-index: 2; width: 40%"
-        >
+        > 
+        <span style="display: flex; width: 200px;justify-content: space-around;align-items: center;">
+          <p>Select year:</p>
           <select
             class="form-select currentYear"
             aria-label="Default select example"
-            style="width: 40%"
+            style="width: 50%"
           >
             <% year.forEach((e,i) => { %>
             <option value="<%= e %>" ><%= e %></option>
             <% }) %>
           </select>
+        </span>
+          
         </form>
         <!--previewdiv  -->
         <div class="preview">
