--- a/views/admin/home/ourToppers.ejs
+++ b/views/admin/home/ourToppers.ejs
@@ -52,6 +52,8 @@
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
 								id="uploadlink"
+								minlength="1"
+								maxlength="70"
 								required
 							/>
 						</div>
@@ -96,6 +98,8 @@
 								class="form-control collegenum"
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
+								minlength="1"
+								maxlength="70"
 								id="uploadlink"
 							/>
 						</div>
