--- a/views/admin/results/studentdetails.ejs
+++ b/views/admin/results/studentdetails.ejs
@@ -76,6 +76,8 @@
                 aria-label="Username"
                 aria-describedby="addon-wrapping"
                 id="uploadlink"
+                minlength="1"
+								maxlength="70"
                 required
               />
             </div>
@@ -104,6 +106,8 @@
                 class="form-control"
                 aria-label="Username"
                 aria-describedby="addon-wrapping"
+                minlength="1"
+								maxlength="70"
                 id="uploadlink"
               />
             </div>
