--- a/views/admin/results/studentdetails.ejs
+++ b/views/admin/results/studentdetails.ejs
@@ -41,8 +41,8 @@
           "
           style="z-index: 2; width: 40%"
         > 
-        <span style="display: flex; width: 200px;justify-content: space-around;align-items: center;">
-          <p>Select year:</p>
+        <span style="display: flex; width: 300px;justify-content: space-around;align-items: center;">
+          <h5 style="font-weight: 600;">Select year:</h5>
           <select
             class="form-select currentYear"
             aria-label="Default select example"
