--- a/views/admin/home/neetAchievements.ejs
+++ b/views/admin/home/neetAchievements.ejs
@@ -38,8 +38,8 @@
 								aria-describedby="addon-wrapping"
 								id="uploadlink"
 								value="<%= parseInt(seats) %>"
-								minlength="1"
-								maxlength="999"
+								min="1"
+								max="999"
 								required
 							/>
 						</div>
@@ -55,8 +55,8 @@
 								aria-describedby="addon-wrapping"
 								id="uploadlink"
 								value="<%= parseInt(consecutiveyears) %>"
-								minlength="1"
-								maxlength="99"
+								min="1"
+								max="99"
 								required
 							/>
 						</div>
@@ -72,8 +72,8 @@
 								aria-describedby="addon-wrapping"
 								id="uploadlink"
 								value="<%= parseInt(successrate)  %>"
-								minlength="1"
-								maxlength="100"
+								min="1"
+								max="100"
 								required
 							/>
 						</div>
@@ -83,14 +83,14 @@
 							>
 							<input
 								type="number"
-								name="admission"
+								name="admissions"
 								class="form-control"
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
 								id="uploadlink"
 								value="<%= parseInt(admissions) %>"
-								minlength="1"
-								maxlength="999"
+								min="1"
+								max="999"
 								required
 							/>
 						</div>
