--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -1354,6 +1354,9 @@ iframe {
 		/* margin-top: 2rem; */
 		font-size: 3rem;
 	}
+	.percentage {
+		font-size: 2rem;
+	}
 	.Stat h3 {
 		font-size: 1.2rem;
 		font-weight: 400;
@@ -1492,6 +1495,9 @@ iframe {
 	.stat h1 {
 		font-size: 3rem;
 	}
+	.percentage {
+		font-size: 2rem;
+	}
 	.stat h3 {
 		font-size: 1rem;
 		margin-left: 0.5rem;
@@ -1551,6 +1557,9 @@ iframe {
 	.Stat h1 {
 		/* margin-top: 2rem; */
 		font-size: 2.5rem;
+	}
+	.percentage {
+		font-size: 1.5rem;
 	}
 	.Stat h3 {
 		font-size: 1.2rem;
@@ -1764,6 +1773,9 @@ iframe {
 	.stat h1 {
 		font-size: 2rem;
 	}
+	.percentage {
+		font-size: 2rem;
+	}
 	.stat h3 {
 		font-size: 0.8rem;
 		margin-left: 0.5rem;
@@ -1796,6 +1808,10 @@ iframe {
 	}
 	.Stat h1 {
 		font-size: 2.2rem;
+	}
+	.percentage {
+		font-size: 1.5rem;
+		
 	}
 	.Stat h3 {
 		font-size: 1.2rem;
