--- a/views/admin/results/images.ejs
+++ b/views/admin/results/images.ejs
@@ -33,7 +33,8 @@
 			<div class="left"><%- include('../../layout/adminSideBar') %></div>
 			<div class="right">
 				<form
-					action="/admin/results/images"
+					action="
+					/admin/results/images"
 					method="post"
 					class="imgform"
 					enctype="multipart/form-data"
