--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -76,7 +76,7 @@
 									stroke-width="2"
 									d="M5 13l4 4L19 7"
 								/></svg></span
-						>Separate Study Materials for Physics, Chemistry & Biology
+						>Separate Study Materials for Physics, Chemistry & Maths
 					</li>
 					<li>
 						<span
@@ -95,7 +95,7 @@
 									d="M5 13l4 4L19 7"
 								/></svg></span
 						>Unit Tests, Cumulative Tests, Revision Tests in Physics, Chemistry
-						& Biology
+						& Maths,Full Portion Revision Test
 					</li>
 					<li>
 						<span
@@ -274,7 +274,7 @@
 									stroke-width="2"
 									d="M5 13l4 4L19 7"
 								/></svg></span
-						>Separate Study Materials for Physics, Chemistry & Biology
+						>Separate Study Materials for Physics, Chemistry & Maths
 					</li>
 					<li>
 						<span
@@ -293,7 +293,7 @@
 									d="M5 13l4 4L19 7"
 								/></svg></span
 						>Unit Tests, Cumulative Tests, Revision Tests in Physics, Chemistry
-						& Biology
+						& Maths
 					</li>
 					<li>
 						<span
@@ -473,7 +473,7 @@
 									stroke-width="2"
 									d="M5 13l4 4L19 7"
 								/></svg></span
-						>Separate Study Materials for Physics, Chemistry & Biology
+						>Separate Study Materials for Physics, Chemistry & Maths
 					</li>
 					<li>
 						<span
@@ -492,7 +492,7 @@
 									d="M5 13l4 4L19 7"
 								/></svg></span
 						>Unit Tests, Cumulative Tests, Revision Tests in Physics, Chemistry
-						& Biology
+						& Maths
 					</li>
 					<li>
 						<span
@@ -601,7 +601,7 @@
 									stroke-width="2"
 									d="M5 13l4 4L19 7"
 								/></svg></span
-						>Concept Capsules
+						>Concept Capsules-6
 					</li>
 					<li>
 						<span
@@ -619,7 +619,25 @@
 									stroke-width="2"
 									d="M5 13l4 4L19 7"
 								/></svg></span
-						>Study Materials- 15
+						>Study Materials- 6
+					</li>
+					<li>
+						<span
+							><svg
+								class="tick"
+								xmlns="http://www.w3.org/2000/svg"
+								class="h-6 w-6"
+								fill="none"
+								viewBox="0 0 24 24"
+								stroke="currentColor"
+							>
+								<path
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-width="2"
+									d="M5 13l4 4L19 7"
+								/></svg></span
+						>Solution Booklets-3
 					</li>
 				</ul>
 			</div>
