--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -39,8 +39,7 @@
 									stroke-linejoin="round"
 									stroke-width="2"
 									d="M5 13l4 4L19 7"
-								/></svg
-						></span>
+								/></svg></span>
 						Full day course from Monday to Saturday
 					</li>
 					<li>
