--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -212,7 +212,7 @@ a.site-logo {
 		background-color: rgba(255, 255, 255, 0.1);
 	}
 	.site-navbar ul.open {
-		max-height: 100vh;
+		height: 100vh;
 		min-height: -webkit-fill-available;
 		overflow: visible;
 		z-index: 20;
