--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -212,8 +212,7 @@ a.site-logo {
 		background-color: rgba(255, 255, 255, 0.1);
 	}
 	.site-navbar ul.open {
-		height: 100vh;
-		min-height: -webkit-fill-available;
+		max-height: 100%;
 		overflow: visible;
 		z-index: 20;
 		padding-top: 1%;
