admin course remove

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -12,6 +12,7 @@
 		/>
 		<link rel="stylesheet" href="stylesheets/chatbot.css" />
 		<link rel="stylesheet" href="stylesheets/pagination.css" />
+		<link rel="shortcut icon" href="../../images/home/classic-nee-tacademy-logo.png" type="image/x-icon" />
 
 		<title>Results</title>
 		<style>
