--- a/views/successStories2.ejs
+++ b/views/successStories2.ejs
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="../stylesheets/successStories2.css" />
 	<link rel="stylesheet" href="stylesheets/common.css" />
 	<link rel="stylesheet" href="stylesheets/chatbot.css" />
+	<link rel="shortcut icon" href="../../images/home/classic-nee-tacademy-logo.png" type="image/x-icon" />
 	<style>
 		.successstoriesnav{
 			background-color: #369afe;
