--- a/views/admin/chatbot/chatbot.ejs
+++ b/views/admin/chatbot/chatbot.ejs
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Admin panel</title>
+		<link rel="shortcut icon" href="../../images/home/classic-nee-tacademy-logo.png" type="image/x-icon" />
 		<link rel="stylesheet" href="../../stylesheets/admin.css" />
 		<link rel="stylesheet" href="../../stylesheets/pagination.css" />
 
@@ -49,14 +50,6 @@
 					<tbody class="tbody"></tbody>
 				</table>
 				<div id="pagination-container"></div>
-				<!-- <div class="buttondiv mb-2">
-          <button type="button" class="btn btn-primary px-4 mx-1 prev" disabled>
-            Previous
-          </button>
-          <button type="button" class="btn btn-primary px-4 mx-1 next">
-            &nbsp;&nbsp;Next&nbsp;&nbsp;
-          </button>
-        </div> -->
 
 				<% if (chatbot.length > 0) { %>
 					<form
