--- a/views/admin/demovideos/headimage.ejs
+++ b/views/admin/demovideos/headimage.ejs
@@ -3,8 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="wi
+		dth=device-width, initial-scale=1.0" />
 		<title>Admin panel</title>
+		<link rel="shortcut icon" href="../../images/home/classic-nee-tacademy-logo.png" type="image/x-icon" />
 		<link rel="stylesheet" href="../../stylesheets/sliderrevolution.css" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
