--- a/views/cloudinary.ejs
+++ b/views/cloudinary.ejs
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Cloudinary</title>
+		<link rel="shortcut icon" href="../../images/home/classic-nee-tacademy-logo.png" type="image/x-icon" />
 	</head>
 	<body>
 		<form action="/homeslider" method="POST" enctype="multipart/form-data" >
