--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="courses.css" />
 		<link rel="stylesheet" href="stylesheets/chatbot.css" />
 		<title>Courses</title>
+		<link rel="shortcut icon" href="../../images/home/classic-nee-tacademy-logo.png" type="image/x-icon" />
 		<style>
 			.coursesnav{
 			background-color: #60efff;
