--- a/views/demovideos.ejs
+++ b/views/demovideos.ejs
@@ -17,6 +17,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="stylesheets/chatbot.css" />
+		<link rel="shortcut icon" href="../../images/home/classic-nee-tacademy-logo.png" type="image/x-icon" />
 
 		<title>Demo Videos</title>
 		<style>
