--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,6 +15,7 @@
 
 	<link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
 	<link rel="stylesheet" href="stylesheets/chatbot.css">
+	<link rel="shortcut icon" href="../../images/home/classic-nee-tacademy-logo.png" type="image/x-icon" />
 	<title>ClassicNeetAcademy</title>
 	<style>
 		.homenav{
