--- a/views/sqlreg.ejs
+++ b/views/sqlreg.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>reg table</title>
+    <link rel="shortcut icon" href="../../images/home/classic-nee-tacademy-logo.png" type="image/x-icon" />
 </head>
 <body>
       <form action="/admin" method="POST" id="login" style="display: flex; flex-direction: column; width: 70vw;">
