--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -23,14 +23,13 @@
                 /></svg
             ></span>
             <div class="address">
-              1/1, First Floor, PS Square, KHS Hospital Road, Opp. to Ponnuswamy
-              Gounder Kalyana Mandapam, Salem - 4
+              1/1, First Floor, PS Square, SKS Hospital Road, Opp. to Ponnuswamy Gounder Kalyana Mandapam, Salem - 4
             </div>
           </div>
-          <span class="mobspan"
+          <span class="mobspan s1"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
-              class="h-5 w-5"
+              class="h-5 w-5 "
               viewBox="0 0 20 20"
               fill="currentColor"
             >
@@ -38,7 +37,8 @@
                 d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"
               />
             </svg>
-            &nbsp; +91-78670 14165</span
+            <span class="num">&nbsp; +91-78670 14165</span>
+            </span
           >
         </div>
         <div class="address-container">
@@ -62,7 +62,7 @@
               Road, Namakkal - 637002
             </div>
           </div>
-          <span class="mobspan"
+          <span class="mobspan s2"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-5 w-5"
@@ -97,7 +97,7 @@
               Dharmapuri - 636701
             </div>
           </div>
-          <span class="mobspan"
+          <span class="mobspan s3"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-5 w-5"
@@ -132,7 +132,7 @@
               Bye-pass Road, Vellore
             </div>
           </div>
-          <span class="mobspan"
+          <span class="mobspan s4"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-5 w-5"
@@ -147,7 +147,7 @@
           >
         </div>
       </div>
-      <div class="addressbox">
+      <!-- <div class="addressbox">
         <span
           ><svg
             xmlns="http://www.w3.org/2000/svg"
@@ -203,7 +203,7 @@
           </svg>
           &nbsp; +91-7373755664</span
         >
-      </div>
+      </div> -->
     </div>
 
     <div class="footer_head">
