--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -44,7 +44,7 @@
 					</ul>
 					<span class="dark-mode-toggle"></span>
 					<button class="nav-toggler">
-						<span></span>
+						<span class="nav-span"></span>
 					</button>
 				</div>
 				<!-- nav-toggler for mobile version only -->
