--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -753,13 +753,13 @@ p {
 
 .stats::after {
 	position: absolute;
-	content: '';
-	width: 100%;
-	height: 100%;
-	z-index: 1;
-	top: 0;
-	left: 0;
-	background: rgba(100, 70, 70, 0.125);
+    content: '';
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 1%, transparent 50%);
 }
 
 .statBox {
@@ -767,7 +767,7 @@ p {
 	/* background-color: #2b72e4; */
 	/* height: 25%; */
 	display: grid;
-	
+
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	position: absolute;
 	z-index: 2;
