--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -279,6 +279,9 @@
 <% if(success && success.length) {%>
 	<p class="sweetp"><%= success %></p>
 <% } %>
+<% if(error && error.length) {%>
+	<p class="sweetperr"><%= error %></p>
+<% } %>
 
 
 <script src="../../javascripts/admin/header.js"></script>
