--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -753,13 +753,17 @@ p {
 
 .stats::after {
 	position: absolute;
-    content: '';
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 1%, transparent 50%);
+	content: '';
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	background: linear-gradient(
+		to bottom,
+		rgba(0, 0, 0, 0.8) 1%,
+		transparent 50%
+	);
 }
 
 .statBox {
@@ -778,6 +782,7 @@ p {
 	/* font-size: .5rem; */
 	justify-self: center;
 	margin-top: 2rem;
+	color: yellow;
 }
 .Stat h1 {
 	/* margin-top: 2rem; */
